--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mibble-api",
+  "name": "himti-api",
   "version": "1.0.0",
   "main": "./src/index.ts",
   "author": "Muhammad Fikri",
