--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@types/cookie-parser": "^1.4.7",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -32,6 +33,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "multer": "^1.4.5-lts.1",
     "tsconfig-paths": "^4.2.0"
   },
   "scripts": {
