--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@eslint/js": "^9.4.0",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/firebase": "^3.2.1",
     "@types/jsonwebtoken": "^9.0.6",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
@@ -24,17 +25,23 @@
     "typescript-eslint": "^7.12.0"
   },
   "dependencies": {
+    "@google-cloud/storage": "^7.11.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
+    "@vercel/blob": "^0.23.3",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.12.2",
+    "global": "^4.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "vercel": "^34.2.6"
   },
   "scripts": {
     "start": "npx tsc -w ",
