--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vercel/blob": "^0.23.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -40,6 +41,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "tsconfig-paths": "^4.2.0",
     "vercel": "^34.2.6"
   },
