--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@eslint/js": "^9.4.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/firebase": "^3.2.1",
     "@types/jsonwebtoken": "^9.0.6",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^7.11.2",
+    "@prisma/client": "^5.16.0",
     "@types/cookie-parser": "^1.4.7",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
@@ -34,6 +36,7 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -43,6 +46,7 @@
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "prisma": "^5.16.0",
     "tsconfig-paths": "^4.2.0",
     "vercel": "^34.2.6"
   },
