--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
 {
   "version": 2,
-  "builds": [
+ "builds": [
     {
       "src": "src/index.ts",
       "use": "@vercel/node",
-      "config": { "includeFiles": ["src/**"] }
+      "config": {
+        "includeFiles": ["src/**"],
+        "commands": {
+          "build": "prisma generate && tsc"
+        }
+      }
     }
   ],
   "routes": [
