--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "express": "^4.19.2",
     "firebase": "^10.12.4",
     "global": "^4.4.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
