--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.4",
+    "firebase-functions": "^5.0.1",
     "global": "^4.4.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
