--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,7 +2,7 @@
 deployment:
   tasks:
     - cd /home2/himtiumtid/repositories/himti-api
-    - npm install
+    - /usr/local/bin/npm install
     - /usr/local/bin/npm run build
     - npx prisma migrate deploy
-    - npm start ./dist/index.js --name "himti-api"
+    - /usr/local/bin/pm2 start ./dist/index.js --name "himti-api"
