--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/express": "^4.17.21",
     "@types/firebase": "^3.2.1",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/nodemailer": "^6.4.15",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "eslint": "^9.4.0",
@@ -48,6 +49,7 @@
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.14",
     "prisma": "^5.16.0",
     "tsconfig-paths": "^4.2.0",
     "vercel": "^34.2.6"
