--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
+    "@types/qrcode": "^1.5.5",
     "@vercel/blob": "^0.23.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "canvas": "^2.11.2",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -51,6 +53,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.14",
     "prisma": "^5.16.0",
+    "qrcode": "^1.5.3",
     "tsconfig-paths": "^4.2.0",
     "vercel": "^34.2.6"
   },
