fix: download cert

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/firebase": "^3.2.1",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.15",
+    "@types/pdfkit": "^0.13.4",
     "@typescript-eslint/eslint-plugin": "^7.12.0",
     "@typescript-eslint/parser": "^7.12.0",
     "eslint": "^9.4.0",
@@ -52,6 +53,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.14",
+    "pdfkit": "^0.15.0",
     "prisma": "^5.16.0",
     "qrcode": "^1.5.3",
     "tsconfig-paths": "^4.2.0",
