--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "vercel": "^34.2.6"
   },
   "scripts": {
-    "start": "npx tsc -w ",
+    "start": "node dist/index.js",
     "dev": "npx nodemon",
     "build": "prisma generate && tsc",
     "lint": "npx eslint ./src --ext .ts",
