feat: add fcm token

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     /* Language and Environment */
     "baseUrl": "./src", /* Set to the root of your source files */
     "target": "ES2017",
+    "resolveJsonModule": true,
     /* Modules */
     "module": "commonjs",
     "outDir": "./dist",
