--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@google-cloud/storage": "^7.11.2",
     "@prisma/client": "^5.16.0",
+    "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.7",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.2",
@@ -46,6 +47,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "firebase": "^10.12.4",
+    "firebase-admin": "^12.3.1",
     "firebase-functions": "^5.0.1",
     "global": "^4.4.0",
     "googleapis": "^140.0.1",
