--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "firebase-functions": "^5.0.1",
     "global": "^4.4.0",
     "googleapis": "^140.0.1",
+    "ioredis": "^5.4.1",
+    "item-store-redis": "^0.3.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
@@ -60,6 +62,7 @@
     "pdfkit": "^0.15.0",
     "prisma": "^5.16.0",
     "qrcode": "^1.5.3",
+    "redis": "^4.7.0",
     "tsconfig-paths": "^4.2.0",
     "vercel": "^34.2.6"
   },
