--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "typescript-eslint": "^7.12.0"
   },
   "dependencies": {
-    "@google-cloud/storage": "^7.11.2",
+    "@aws-sdk/client-s3": "^3.637.0",
     "@prisma/client": "^5.16.0",
     "@types/compression": "^1.7.5",
     "@types/cookie-parser": "^1.4.7",
