--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,31 +85,31 @@ jobs:
       - name: Prepare environment variables
         run: |
           cat << EOF > env_vars.yaml
-          DATABASE_URL: ${{ secrets.DATABASE_URL }}
-          BUCKET_NAME: ${{ secrets.BUCKET_NAME }}
-          GCP_APP_NAME: ${{ secrets.APPLICATION }}
-          ANGGOTA_CODE: ${{ secrets.ANGGOTA_CODE }}
-          AWS_STORAGE_ACCESS_KEY: ${{ secrets.AWS_STORAGE_ACCESS_KEY }}
-          AWS_STORAGE_BUCKET: ${{ secrets.AWS_STORAGE_BUCKET }}
-          AWS_STORAGE_ENDPOINT: ${{ secrets.AWS_STORAGE_ENDPOINT }}
-          AWS_STORAGE_REGION: ${{ secrets.AWS_STORAGE_REGION }}
-          AWS_STORAGE_SECRET_KEY: ${{ secrets.AWS_STORAGE_SECRET_KEY }}
-          CLOUDINARY_API_KEY: ${{ secrets.CLOUDINARY_API_KEY }}
-          CLOUDINARY_API_SECRET: ${{ secrets.CLOUDINARY_API_SECRET }}
-          CLOUDINARY_CLOUD_NAME: ${{ secrets.CLOUDINARY_CLOUD_NAME }}
-          EMAIL_SENDER: ${{ secrets.EMAIL_SENDER }}
-          FIREBASE_CLIENT_EMAIL: ${{ secrets.FIREBASE_CLIENT_EMAIL }}
-          FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
-          FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
-          GOOGLE_CREDENTIAL: ${{ secrets.GOOGLE_CREDENTIAL }}
-          JWT_EXPIRES: ${{ secrets.JWT_EXPIRES }}
-          JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          PROJECT_ID: ${{ secrets.PROJECT_ID }}
-          SMTP_HOST: ${{ secrets.SMTP_HOST }}
-          SMTP_LOGIN: ${{ secrets.SMTP_LOGIN }}
-          SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
-          SMTP_PORT: ${{ secrets.SMTP_PORT }}
-          SMTP_USER: ${{ secrets.SMTP_USER }}
+          DATABASE_URL: "${{ secrets.DATABASE_URL }}"
+          BUCKET_NAME: "${{ secrets.BUCKET_NAME }}"
+          GCP_APP_NAME: "${{ secrets.APPLICATION }}"
+          ANGGOTA_CODE: "${{ secrets.ANGGOTA_CODE }}"
+          AWS_STORAGE_ACCESS_KEY: "${{ secrets.AWS_STORAGE_ACCESS_KEY }}"
+          AWS_STORAGE_BUCKET: "${{ secrets.AWS_STORAGE_BUCKET }}"
+          AWS_STORAGE_ENDPOINT: "${{ secrets.AWS_STORAGE_ENDPOINT }}"
+          AWS_STORAGE_REGION: "${{ secrets.AWS_STORAGE_REGION }}"
+          AWS_STORAGE_SECRET_KEY: "${{ secrets.AWS_STORAGE_SECRET_KEY }}"
+          CLOUDINARY_API_KEY: "${{ secrets.CLOUDINARY_API_KEY }}"
+          CLOUDINARY_API_SECRET: "${{ secrets.CLOUDINARY_API_SECRET }}"
+          CLOUDINARY_CLOUD_NAME: "${{ secrets.CLOUDINARY_CLOUD_NAME }}"
+          EMAIL_SENDER: "${{ secrets.EMAIL_SENDER }}"
+          FIREBASE_CLIENT_EMAIL: "${{ secrets.FIREBASE_CLIENT_EMAIL }}"
+          FIREBASE_PRIVATE_KEY: "${{ secrets.FIREBASE_PRIVATE_KEY }}"
+          FIREBASE_PROJECT_ID: "${{ secrets.FIREBASE_PROJECT_ID }}"
+          GOOGLE_CREDENTIAL: "${{ secrets.GOOGLE_CREDENTIAL }}"
+          JWT_EXPIRES: "${{ secrets.JWT_EXPIRES }}"
+          JWT_SECRET: "${{ secrets.JWT_SECRET }}"
+          PROJECT_ID: "${{ secrets.PROJECT_ID }}"
+          SMTP_HOST: "${{ secrets.SMTP_HOST }}"
+          SMTP_LOGIN: "${{ secrets.SMTP_LOGIN }}"
+          SMTP_PASSWORD: "${{ secrets.SMTP_PASSWORD }}"
+          SMTP_PORT: "${{ secrets.SMTP_PORT }}"
+          SMTP_USER: "${{ secrets.SMTP_USER }}"
           EOF
 
       - name: Debug - Check env_vars.yaml content
