--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,6 @@ on:
     branches: [main]
 
 jobs:
-  
   deploy:
     name: Deploy to Cloud Run
     runs-on: ubuntu-latest
@@ -38,18 +37,17 @@ jobs:
       SMTP_PORT: ${{ secrets.SMTP_PORT }}
       SMTP_USER: ${{ secrets.SMTP_USER }}
 
-
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
       - name: Login to Google Cloud
-        uses: 'google-github-actions/auth@v2'
+        uses: "google-github-actions/auth@v2"
         with:
           credentials_json: ${{ secrets.GOOGLE_CREDENTIAL }}
 
-      - name: 'Set up Cloud SDK'
-        uses: 'google-github-actions/setup-gcloud@v2'
+      - name: "Set up Cloud SDK"
+        uses: "google-github-actions/setup-gcloud@v2"
 
       - name: Enable necessary APIs
         run: |
@@ -138,7 +136,6 @@ jobs:
           gcloud run services logs read --service=${{ secrets.APPLICATION }} \
             --region=asia-southeast2
 
-
 # name: himti-api-dev
 
 # on:
@@ -149,7 +146,7 @@ jobs:
 #     branches: [main]
 
 # jobs:
-  
+
 #   deploy:
 #     name: Deploy to Cloud Run
 #     runs-on: ubuntu-latest
